--- a/Transition.html
+++ b/Transition.html
@@ -42,7 +42,7 @@
             <p><strong>Contoh:</strong></p>
             <button class="btn-rectangle">Arahkan mouse ke sini</button>
             <br><br>
-            <a href="pseudo.html" class="btn-rectangle" style="margin-right:8px;">Sebelumnya</a>
+            <a href="index.html" class="btn-rectangle" style="margin-right:8px;">Sebelumnya</a>
             <a href="keyframe.html" class="btn-rectangle">Next</a>
         </div>
     </div>
